hphp/test/slow/debugger/print-datetime.php.expectf
Program %s/print-datetime.php loaded. Type '[r]un' or '[c]ontinue' to go.
=new DateTime('9/18/2014 11:00:00 America/Los_Angeles');
DateTime Object
(
    [date] => "2014-09-18 11:00:00.000000"
    [timezone_type] => 3
    [timezone] => "America/Los_Angeles"
)

=function () { return 4; };
"Closure%s"
p new DateTime('@'.time(), new DateTimeZone('UTC'))
wire error: unserialize() threw 'Exception' with message 'DateTimeZone::__construct(): Unknown or bad timezone (+00:00)'
null
c
Break on line 2 of %s/print-datetime.php
   1 <?php
   2*hphpd_break();
   3 (END)

quit